# NitroCppTest-viniciusginja

./: CMakeLists.txt  README.md
input/: input1.json  input1_bad_entry.json  input1_bad_file.json
sourcecode/app/: app.cpp  app.h  common.ixx  parse.ixx  print.ixx  solve.ixx
sourcecode/tests/: unit_tests.cpp
